# AdventOfCode

./: .gitignore  README.md
2024/day01_list_comparisons/: 01a_sorted_distance.py  01au_handmade_abs.py  01ax_absolute_distance.py  01b_item_count.py  01bu_older_library.py
2024/day02_almost_sorted/: 02a_array_checker.py  02au_unnecessary_reversal.py  02b_error_tolerance.py  02bu_unnecessary_reversal.py
2024/day03_hidden_operators/: 03a_integer_multiplication.py  03au_manual_regexp.py  03ax_regexp_rescue.py  03b_conditional_statements.py  03bu_manual_regexp.py  03bx_regexp_rescue.py  x03b_regex_power.py
2024/day04_xmas_pattern/: 04a_word_search.py  04au_older_library.py  04b_cross_shape.py  04bu_older_library.py  04bx_library_update.py  x04a_library_update.py
2024/day05_page_ordering/: 05a_sequence_check.py  05au_older_library.py  05ax_library_update.py  05b_custom_sort.py  05bu_older_library.py  05bx_library_update.py  x05a_library_update.py
2024/day06_looping_paths/: 06a_single_path.py  06au_older_library.py  06ax_library_update.py  06b_loop_detector.py  06bo_obstacle_lookup.py  06bu_superfluous_checks.py  06bx_library_update.py  06bx_preliminary_filter.py  06bz_loop_optimization.py  06bz_preliminary_filter.py  06bzz_loop_optimization.py  06bzz_obstacle_lookup.py  x06a_library_update.py  x06b_preliminary_filter.py
aoc-shortcuts/: .gitignore  README.md  aoc_shortcuts.py  pyproject.toml
aoc_library/: README.md  aoc_library.py  pyproject.toml
aoc_shortcuts/: README.md  aoc_shortcuts.py  pyproject.toml
aoc_shortcuts/tests/: aoc_shortcuts_test.py
(+153 files in other folders)
