[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc_shortcuts"  # Name chosen to prevent collisions with PyPI.
version = "2024.12.21"
dependencies = ["numpy", "sortedcontainers", "tqdm", "pytest"]
authors = [{name = "Jan Grudo"}]
license = {text = "Public domain"}
